# Tree-Sitter-Kind

./: .gitignore  Cargo.toml  binding.gyp  grammar.js  package.json  tree-sitter-kind.wasm
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
