[package]
categories = ["parsing", "text-editors"]
description = "Kind grammar for the tree-sitter parsing library"
edition = "2018"
keywords = ["incremental", "parsing", "Kind"]
license = "MIT"
name = "tree-sitter-kind"
repository = "https://github.com/tree-sitter/tree-sitter-Kind"
version = "0.0.1"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
